# djangocourse

./: README.md  build.sh  db.sqlite3  pyproject.toml  requirements.txt
app/: admin.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_create_superuser.py  0003_article_creator_alter_article_word_count.py
djangocourse/: settings.py  urls.py
templates/app/: article_create.html  article_delete.html  article_update.html  base.html  home.html
