[project]
name = "djangocourse"
version = "0.1.0"
description = ""
authors = [
    {name = "j-hry",email = "janellehry98@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.4,<6.0.0)"
]

[tool.poetry]
packages = [{include = "djangocourse", from = "src"}]

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.2.0"

[tool.djlint]
ignore = "H030,H031"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
